[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/UIScripts/MenuScripts/PauseScript.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI/PauseMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/UI/ControlsMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/UI/SettingsMenu.tscn" type="PackedScene" id=4]


[node name="PauseUI" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1920.0
margin_bottom = -1080.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" parent="." instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 1920.0
margin_bottom = 1080.0

[node name="ControlsMenu" parent="." instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 1920.0
margin_bottom = 1080.0

[node name="SettingsMenu" parent="." instance=ExtResource( 4 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 1920.0
margin_bottom = 1080.0

[connection signal="pressed" from="PauseMenu/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="PauseMenu/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="PauseMenu/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="PauseMenu/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="ControlsMenu/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="SettingsMenu/Back" to="." method="_on_Back_pressed"]

[editable path="PauseMenu"]
[editable path="ControlsMenu"]
[editable path="SettingsMenu"]
